# storage/api-docs/api-docs.json
@@ -525,6 +525,32 @@
                 ]
             }
         },
+        "/mst/role": {
+            "get": {
+                "tags": [
+                    "Master"
+                ],
+                "summary": "List Role Master",
+                "description": "List Role",
+                "operationId": "rolelist",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
         "/reg": {
             "post": {
                 "tags": [
